name:                brainfuck-hs
version:             0.1.0.0
synopsis:            Yet another Brainfuck interpreter in Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/brainfuck-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Daan Rijks
maintainer:          example@example.com
copyright:           2016 Daan Rijks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable brainfuck-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , array
