name:                brainfuck-hs
version:             0.1.0.0
synopsis:            Yet another Brainfuck interpreter
description:         Please see README.md
homepage:            https://github.com/ijks/brainfuck-hs
license:             BSD3
license-file:        LICENSE
author:              Daan Rijks
copyright:           2016 Daan Rijks
build-type:          Simple
cabal-version:       >=1.10

executable brainfuck-hs
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.9 && < 5
                    , containers
                    , mtl
                    , vector
